apps/videoplayer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videoplayer
  namespace: wolweb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: videoplayer.youkan.uk
spec:
  ingressClassName: cloudflare
  rules:
    - host: videoplayer.youkan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: videoplayer
                port:
                  number: 8000
